--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "outDir": "dist",
     "strictNullChecks": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
